# ESMBenchmarkViz

./: .buildinfo  .pre-commit-config.yaml  .setup.cfg  CITATION.cff  MANIFEST.in  README.md  api.html  gallery.html  genindex.html  index.html  installation.html  objects.inv  overview.html  pyproject.toml  search.html  searchindex.js  setup.py
.doctrees/: api.doctree  environment.pickle  gallery.doctree  index.doctree  installation.doctree  overview.doctree
.doctrees/examples/: example_portrait_plot.doctree  example_scatter_plot.doctree  example_taylor_diagram.doctree
.doctrees/nbsphinx/examples/: example_portrait_plot.ipynb  example_scatter_plot.ipynb  example_taylor_diagram.ipynb
.github/workflows/: build_workflow.yml
ESMBenchmarkViz/: README.md  __init__.py  core_portrait_plot.py  core_scatter_plot.py  core_taylor_diagram.py  support_functions.py
ESMBenchmarkViz/taylor_diagram/: README.md  example_taylor_diagram.ipynb  taylor_diagram.py
_custom_build/: backend.py
_modules/: index.html
_modules/ESMBenchmarkViz/: core_portrait_plot.html  core_scatter_plot.html  core_taylor_diagram.html
_modules/ESMBenchmarkViz/taylor_diagram/: taylor_diagram.html
_sources/: api.rst.txt  gallery.rst.txt  installation.rst.txt  overview.rst.txt
_sources/examples/: example_portrait_plot.ipynb.txt  example_scatter_plot.ipynb.txt  example_taylor_diagram.ipynb.txt
_static/: interactive_taylor_diagram.html
conda-env/: environment.yml
demo/: example_taylor_diagram.ipynb
docs/: Makefile  api.rst  conf.py  gallery.rst  index.rst  installation.rst
docs/_static/: interactive_taylor_diagram_screen_capture.mov
docs/examples/: example_portait_plot.ipynb  example_portrait_plot.ipynb  example_scatter_plot.ipynb  example_taylor_diagram.ipynb  images
docs/paper/: paper.bib  paper.md
examples/: example_portrait_plot.html  example_portrait_plot.ipynb  example_scatter_plot.html  example_scatter_plot.ipynb  example_taylor_diagram.html  example_taylor_diagram.ipynb
misc_scripts/: mov_to_gif.py
taylor_diagram/: README.md  development_v3.ipynb  development_v3.py
tests/: test_core_portrait_plot.py  test_core_scatter_plot.py  test_core_taylor_diagram.py  test_support_functions.py
